# kcm_webcam_settings

./: .gitignore  CMakeLists.txt  QWebcamSettings.cpp  QWebcamSettings.h  README.md  TODO  UdevHelper.cpp  VideoDevice.cpp  VideoDevice.h  VideoDeviceCapFormat.cpp  VideoDeviceCapFormat.h  VideoDeviceCtrl.cpp  VideoDeviceCtrl.h  VideoDeviceList.cpp  VideoDeviceList.h  VideoDeviceResolution.cpp  VideoDeviceResolution.h  cppcheck_report.txt  dependencies.txt  helpers.cpp  helpers.h  kcm_webcam_settings.spec  metainfo.yaml
.copr/: Makefile
.github/ISSUE_TEMPLATE/: bug--.md  bug_report.md
.github/workflows/: ci.yml
package/: metadata.desktop
package/contents/locale/en/LC_MESSAGES/: plasma_applet_kcm_webcam_settings.mo
package/contents/locale/fr/LC_MESSAGES/: plasma_applet_kcm_webcam_settings.mo
package/contents/ui/: main.qml
package/translate/: ReadMe.md  build.sh  fr.po  merge.sh
src/: CMakeLists.txt  QWebcamSettings.cpp  QWebcamSettings.h  UdevHelper.cpp  UdevHelper.h  VideoDevice.cpp  VideoDevice.h  VideoDeviceCapFormat.cpp  VideoDeviceCapFormat.h  VideoDeviceCtrl.cpp  VideoDeviceCtrl.h  VideoDeviceList.cpp  VideoDeviceList.h  VideoDeviceResolution.h  helpers.cpp  helpers.h  kcm_webcam_settings.spec  udevclient.cpp  udevhelper.actions
src-old/: CMakeLists.txt  QWebcamSettings.h  UdevHelper.h  VideoDeviceCtrl.h  VideoDeviceList.cpp  VideoDeviceResolution.cpp
src-old/package/contents/ui/: main.qml
src/package/: metadata.desktop
src/package/contents/ui/: main.qml
translate/: ReadMe.md  build.sh  en.po  fr.po  merge.sh  template.pot
translate/locale/fr/LC_MESSAGES/: kcm_webcam_settings.mo
